# fluent-manager

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  README.pl.md  README.uk.md  pyproject.toml
.agents/skills/fluent-manager/: SKILL.md
.agents/skills/fluent-manager/references/: usage.md  why-this.md
examples/: basic_usage.py
examples/locales/en/: test.ftl
examples/locales/pl/: test.ftl
examples/locales/uk/: test.ftl
src/fluent_manager/: __init__.py  core.py
