[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluent-manager"
version = "1.0.0"
authors = [
    { name = "Andrii Bogdanovych", email = "a@bogdanovych.org" }
]
description = "Lightweight Fluent localisation manager with automatic locale fallback"
readme = "README.md"
keywords = ["fluent", "localization", "i18n", "l10n", "python", "translation"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fluent-runtime==0.4.0",
]
[dependency-groups]
dev = [
    "build==1.4.0",
    "pre_commit==4.5.1",
    "black==26.3.1",
    "isort==8.0.1",
    "twine==6.2.0",
]

[project.urls]
"Homepage" = "https://www.bogdanovych.org"
"Repository" = "https://github.com/BogdanovychA/fluent-manager"
"Bug Tracker" = "https://github.com/BogdanovychA/fluent-manager/issues"
"PyPI Stats" = "https://pypistats.org/packages/fluent-manager"

[tool.setuptools.packages.find]
where = ["src"]