[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluent-manager"
version = "1.0.1"
authors = [
    { name = "Andrii Bogdanovych", email = "a@bogdanovych.org" }
]
description = "Lightweight Fluent localisation manager with automatic locale fallback"
readme = "README.md"
keywords = ["fluent", "localization", "i18n", "l10n", "python", "translation"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "fluent-runtime>=0.4.0",
]
[dependency-groups]
dev = [
    "pre_commit",
    "black",
    "isort",
    "twine",
]

[project.urls]
"Homepage" = "https://www.bogdanovych.org"
"Repository" = "https://github.com/BogdanovychA/fluent-manager"
"DOI" = "https://doi.org/10.5281/zenodo.19492979"
"Bug Tracker" = "https://github.com/BogdanovychA/fluent-manager/issues"
"PyPI Stats" = "https://pypistats.org/packages/fluent-manager"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"
